# moose2

./: .gitignore  2  Cargo.toml  Makefile.toml
client/: .eslintrc.json  .gitignore  Cargo.toml  eslint.config.mjs  index.html  package-lock.json  package.json
client/gallery/: moose2.css  moose2.js
client/gridpaint/lib/: browser.js  bucket.js  canvas.js  clear.js  draw.js  handlers.js  line.js  replace.js  resize.js  save.js  tools.js
client/js/gallery/: moose2.css  moose2.js
client/js/gridpaint/: index.d.ts  index.js
client/js/gridpaint/lib/: canvas.js  clear.d.ts  handlers.js  resize.d.ts  resize.js  tools.d.ts  tools.js
client/js/root/: index.css  index.html  index.js  wasm2.html  wasm_test.html
client/root/: index.css  index.html  index.js  loggedin.js
client/src/: lib.rs  main.rs
client/src/gallery/: moose2.css  moose2.js
client/src/gridpaint/: index.js
client/src/gridpaint/lib/: browser.js  bucket.js  canvas.js  clear.js  draw.js  handlers.js  line.js  replace.js  resize.js  save.js  tools.js
client/src/login/: login.css
client/src/root/: common.css  index.css  index.html  index.js  loggedin.js
contrib/etc/nginx/sites-available/: moose2.ghetty.space.conf
contrib/etc/systemd/system/: moose2-autoimport.path  moose2-autoimport.service  moose2.service
contrib/installers/: windows.ps1
contrib/linux/etc/systemd/system/: moose2-autoimport.path  moose2-autoimport.service  moose2.service
contrib/windows/: installer.ps1
contrib/windows/iis/: web.config
contrib/windows/inetpub/wwwroot/: web.config
gridpaint2/: Cargo.toml
gridpaint2/src/: drawing.rs  lib.rs
public/: moose2.css  moose2.js
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs  render.rs  shared_data.rs
server/src/db/: mod.rs  pool_impl.rs  query.rs  sqlite3_impl.rs  utils.rs
server/src/middleware/: csrf.rs  etag.rs  futs.rs  mod.rs  ratelim.rs
server/src/model/: app_data.rs  author.rs  color.rs  dimensions.rs  mime.rs  mod.rs  moose.rs  other.rs  pages.rs  queries.rs  secure_cookies.rs  votes.rs
server/src/render/: helpers.rs  image.rs  mod.rs  textual.rs
server/src/task/: dump_moose.rs  mod.rs  shutdown.rs  web.rs
server/src/templates/: frontpage.rs  gallery.rs  login.rs  mod.rs
server/src/web_handlers/: api.rs  display.rs  mod.rs  oauth2_gh.rs  static_files.rs
src/: config.rs  html.rs  main.rs  moosedb.rs  render.rs  shared_data.rs  web.rs
src/db/: mod.rs  query.rs
src/model/: moose.rs  other.rs
src/public/: moose2.css
src/templates/: gallery.rs  mod.rs
src/web_handlers/: api.rs  display.rs  mod.rs  oauth2_gh.rs  static_files.rs
templates/: gallery.html  search.html
templates/fragments/: cards.html  header.html  pager.html  search-bar.html
