[package]
name = "moose2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.31"
roaring = "0.9.0"
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
base64 = { version = "0.20.0-alpha.1" }
png = "0.17.5"
crc32fast = "1.3.2"
lazy_static = "1.4.0"
signal-hook = "0.3.14"
maud = "0.23.0"
astra = "0.1.2"
percent-encoding = "2.1.0"
matchit = "0.5.0"