[package]
name = "moose2"
authors = ["Anthony DeDominic"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"

[features]
multi-thread = ["tokio/rt-multi-thread"]
serve-dump = ["dep:tower-http"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# rand = { version = "0.9", features = ["thread_rng"], default-features = false }
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
base64 = { version = "0.22" }
png = "0.17.5"
maud = "0.27.0"
percent-encoding = "2.1.0"
sha2 = "0.10"
deadpool-sync = "0.1.4"
deadpool-sqlite = { version = "0.10.0", default-features = false, features = ["rt_tokio_1"] }
rusqlite = { version = "0.33.0", features = ["bundled", "time"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bcrypt-pbkdf = "0.10.0"
include_dir = { version = "0.7", features = ["metadata"] }
const_format = "0.2.30"
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "signal"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }
http = "1"
tower = "0.5"
tower-cookies = { version = "0.11", features = ["private"] }
tower-http = { version = "0.6", optional = true, features = ["fs"] }
log = "0.4"
env_logger = "0.11"

[dependencies.axum]
version = "0.8"
default-features = false
features = ["http1", "json", "form", "query", "tokio"]

[target.'cfg(windows)'.dependencies]
windows-services = "0.25"
