[package]
name = "moose2"
authors = ["Anthony DeDominic"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"

[features]
multi-thread = ["tokio/rt-multi-thread"]
serve-dump = ["dep:tower-http"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
base64 = "0.22"
crc32fast = "1"
miniz_oxide = "0.9"
maud = "0.27.0"
percent-encoding = "2"
sha2 = "0.10"
deadpool-sqlite = { version = "0.12", default-features = false, features = ["rt_tokio_1"] }
# transitive of deadpool-sqlite
deadpool-sync = "*"
# transitive of deadpool-sqlite
rusqlite = { version = "*", features = ["bundled", "time"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
# transitive of oauth2
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
bcrypt-pbkdf = "0.10.0"
include_dir = { version = "0.7", features = ["metadata"] }
const_format = "0.2.30"
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "signal"] }
tokio-util = { version = "0.7", features = [] }
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }
http = "1"
tower = "0.5"
tower-cookies = { version = "0.11", features = ["private"] }
tower-http = { version = "0.6", optional = true, features = ["fs"] }
log = "0.4"
pin-project-lite = "0.2"
governor = { version = "0.10", default-features = false, features = ["std"] }

[dependencies.axum]
version = "0.8"
default-features = false
features = ["http1", "json", "form", "query", "tokio"]

[target.'cfg(not(windows))'.dependencies]
env_logger = { version = "0.11", default-features = false, features = ["regex"] }

[target.'cfg(windows)'.dependencies]
windows-services = "0.25"
env_logger = { version = "0.11", default-features = false, features = ["regex", "humantime"] }
